# mysync

./: Cargo.toml  README.md
old/: Cargo.toml
old/src/: lib.rs  main.rs
old/src/inputs/: input.rs
old/src/prints/: welcome.rs
src/: lib.rs  main.rs
src/constants/: constants.rs
src/ec2/: mod.rs  tree_instance.rs  upload_file_or_directory.rs
src/inputs/: input.rs
src/prints/: mod.rs  options.rs  welcome.rs
