[package]
name = "mysync"
version = "0.1.0"
authors = ["IbrahimFadel <ibrhaim.m.fadel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies.command-macros]
version = "0.2.7"
features = ["nightly"]